# vdb

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  http_server.cpp  index_factory.cpp  master_server.cpp  proxy_server.cpp  vdb_server.cpp  vector_engine.cpp  vector_index.cpp  vector_storage.cpp  wal_manager.cpp
.VSCodeCounter/2024-11-21_22-54-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
config/: conf1.ini  conf2.ini  conf3.ini  conf4.ini  proxy_conf1.ini  proxy_conf2.ini
include/: cagra_index.h  constant.h  cuda_hnsw_index.h  flat_gpu_index.h  flat_index.h  hnsw_flat_index.h  hnsw_index.h  http_server.h  in_memory_log_store.h  in_memory_state_mgr.h  index_factory.h  ivfpq_index.h  log_state_machine.h  master_http_server.h  master_server.h  proxy_http_server.h  proxy_server.h  raft_stuff.h  vdb_http_server.h  vector_engine.h  vector_index.h  vector_storage.h  wal_manager.h
include/cuda/: search_kernel.cuh
index/: cagra_index.cpp  cuda_hnsw_index.cpp  flat_gpu_index.cpp  flat_index.cpp  hnsw_flat_index.cpp  hnsw_index.cpp  ivfpq_index.cpp
master_server/: master_http_server.cpp  master_server.cpp
proxy_server/: proxy_http_server.cpp  proxy_server.cpp
raft/: in_memory_log_store.cpp  log_state_machine.cpp  raft_stuff.cpp
scripts/: common.py  generate.py  insert_vectors.py  run1.py  run2.py  run3.py  run4.py  search_vectors.py
scripts/test/: test1.py  test2.py  test3.py
src/: constant.rs  errors.rs  http_server.rs  index_factory.rs  main.rs  vector_database.rs
src/http_server/: request_body.rs
src/indexes/: faiss_index.rs  hnsw_index.rs  mod.rs
vdb_server/: http_server.cpp  index_factory.cpp  vdb_http_server.cpp  vector_engine.cpp  vector_index.cpp  wal_manager.cpp
