[package]
name = "vdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
faiss = { version = "0.12.1", features = ["static"] }
hnsw = "0.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
rand_pcg = { version = "0.3.1", features = ["serde1"] }
